--- a/views/back/admin.hbs
+++ b/views/back/admin.hbs
@@ -56,8 +56,8 @@
                         <td>{{dolarApeso precio}}</td>
                         <td>{{stock}}</td>
                         <td>
-                            <a href="/editar/{{id}}">Editar </a><br>
-                            <a href="/borrar/{{id}}">Borrar</a>
+                            <a href="/editar/{{id}}"><button type="button" class="btn btn-outline-primary">Editar</button></a> <br>
+                            <a href="/borrar/{{id}}"><button type="button" class="btn btn-outline-danger">Borrar</button></a>
                         </td>
                     </tr>
                     {{/each}}
