--- a/views/back/editar-producto.hbs
+++ b/views/back/editar-producto.hbs
@@ -6,7 +6,7 @@
 </head>
 
 <body id="backend">
-    <h1>Editando: Lenovo X200</h1>
+    <h1>Editando: {{producto.nombre}}</h1>
     <div class="container mb-4">
         {{>header }}
 
