--- a/views/front/detalle-producto.hbs
+++ b/views/front/detalle-producto.hbs
@@ -26,7 +26,9 @@
                             {{producto.descripcion}}
                         </p>
 
-                        {{producto.caracteristicas}}
+                        {{#listado producto.caracteristicas}}
+                            {{this}}
+                        {{/listado}}
                         <!-- <ul>
                             <li> i7 </li>
                             <li> 11gen </li>
